--- a/src/style/footer.scss
+++ b/src/style/footer.scss
@@ -29,11 +29,12 @@
 }
 
 .logo-footer {
-  height: 200px;
-  width: 200px;
+  height: 110px;
+  width: 110px;
   position: relative;
 }
 
 .logo-footer-img {
   width: 100%;
+  opacity: 30%;
 }
