--- a/src/style/layout.scss
+++ b/src/style/layout.scss
@@ -1,5 +1,6 @@
+@import "./variables.scss";
 .layout {
-  background-color: #282c34;
+  background-color: $background-color;
   min-height: 100vh;
   padding-top: 40px;
   color: white;
