--- a/src/style/menu-header.scss
+++ b/src/style/menu-header.scss
@@ -1,6 +1,7 @@
+@import "./variables.scss";
 .menu-wrapper {
   width: 100%;
-  background-color: #454c5a;
+  background-color: $background-color2;
   position: fixed;
   top: 0;
   left: 0;
@@ -9,7 +10,6 @@
 .menu-header {
   height: 40px;
   font-size: 12px;
-  color: red;
   font-weight: bold;
   max-width: 1200px;
   margin: auto;
@@ -17,7 +17,7 @@
   display: flex;
   flex-direction: row;
   justify-content: flex-end;
-  gap: 10px;
+  gap: 20px;
 }
 
 .menu-button {
@@ -32,12 +32,12 @@
 }
 
 .menu-button:hover {
-  color: #61dafb;
-  border-bottom: 2px solid #61dafb;
+  color: $title-color;
+  border-bottom: 2px solid $title-color;
   opacity: 0.7;
 }
 
 .active {
-  color: #61dafb;
-  border-bottom: 2px solid #61dafb;
+  color: title-color;
+  border-bottom: 2px solid $title-color;
 }
