--- a/src/style/menu-header.scss
+++ b/src/style/menu-header.scss
@@ -41,3 +41,8 @@
   color: title-color;
   border-bottom: 2px solid $title-color;
 }
+.icon-user {
+  height: 30px;
+  width: auto;
+  margin-right: 5px;
+}
